add all configs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Adding config.py file
 config.py
+weather_database/config.py
+vacation_search/config.py
 #Adding additional files
 API_practice.ipynb
 random_numners.ipynb
